--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: netsparker-cloud@1
+  inputs:
+    apiConnection: 'Invicti Connection'
+    scanTypes: '1'
+    scanWebSites: '790e9168-da43-41a7-0eda-affc014f46ef'
