--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,9 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
+- task: netsparker-cloud@1
+  inputs:
+    apiConnection: 'Invicti Connection'
+    scanTypes: '2'
+    scanWebSites: '947a4906-07f1-4a6f-9a30-b00c02b684e5'
+    scanWebSitesProfile: '03dfcd85-818b-4a36-93a4-b00c02b9203a'
